new changes for file processing

--- a/Challenge_Data_Analyst_Abhinav_Pareek.ipynb
+++ b/Challenge_Data_Analyst_Abhinav_Pareek.ipynb
@@ -14,64 +14,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_file():\n",
+    "\n",
+    "# function to process names and values on directory level not much calcuations involved\n",
+    "def process_file(directory):\n",
     "    \n",
-    "    #create coulmns according to the desired result\n",
-    "    #only 5 created more to come#\n",
-    "    directory = 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited'\n",
-    "    df= pd.DataFrame(columns=['Result', 'Drawing Index', 'Drawing Type', 'DP Number'])\n",
+    "    # defined the required variable for use\n",
+    "    new_filename=[]\n",
+    "    drawing_index=[]\n",
+    "    drawing_type=[]\n",
+    "    dp_number=[]\n",
+    "    \n",
+    "   \n",
+    "    \n",
+    "    #created 13 columns as per mentioned in the sample csv output#\n",
+    "    df= pd.DataFrame(columns=['Result', 'Drawing_Index', 'Drawing_Type', 'DP_Number','Drawing_Id','Weight','Dimension_Type_Nominal_Count',\n",
+    "                              'Dimension_Type_Nominal_Tolerance','Dimension_Type_Round_Count','Dimension_Type_Round_Tolerance','View_Count',\n",
+    "                              'Inclined_Drilling_Count','Inclined_Drilling_Values'])\n",
+    "\n",
+    "    \n",
+    "    # iterate over the directory length\n",
     "    for filename in os.listdir(directory):\n",
-    "         print(\"filename\",filename)\n",
-    "        "
+    "        \n",
+    "        \n",
+    "        # call get_drawing_info function for passing the filename one by one \n",
+    "        get_drawing_info(directory+\"/\"+filename)\n",
+    "        # remove the .pdf-Results from the directorey name\n",
+    "        filename = filename.replace(\".pdf-Results\",\"\")\n",
+    "        new_filename.append(filename)\n",
+    "        \n",
+    "        # split filename on '_' for finding index, type & number\n",
+    "        file_part= filename.split('_')\n",
+    "        \n",
+    "        # condition for asigning the specific split parts to respective index\n",
+    "        if len(file_part)==5:\n",
+    "            drawing_index.append(file_part[1])\n",
+    "            drawing_type.append(file_part[3])\n",
+    "            dp_number.append(file_part[4])\n",
+    "        else:\n",
+    "            drawing_index.append(\"\")\n",
+    "            drawing_type.append(\"\")\n",
+    "            dp_number.append(\"\")\n",
+    "    \n",
+    "#     just print statements for checking remove after use\n",
+    "#     print(new_filename)   \n",
+    "    \n",
+    "    df['Result']= new_filename # assign the Result Column to respective new value of filename\n",
+    "    df['Drawing_Index']= drawing_index # assign the Drawing Index Column to respective filename part\n",
+    "    df['Drawing_Type']= drawing_type # assign the Drawing Type Column to respective to respective filename part\n",
+    "    df['DP_Number']=dp_number # assign the DP Number Column to respective to respective filename part\n",
+    "    \n",
+    "#   just print statements for checking remove after use\n",
+    "#     print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_drawing_info(directory):\n",
+    "    print(\"get drawing info function\",directory)\n",
+    "    excel_files = []\n",
+    "    for root, dirs, files in os.walk(directory):\n",
+    "        for file in files:\n",
+    "            if file.endswith('.xls'):\n",
+    "                excel_files.append(os.path.join(root, file))\n",
+    "    \n",
+    "    print(\"excel_files\",excel_files)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filename Res0001_AC_4_ETZ_001.pdf-Results\n",
-      "filename Res0002_AC_0_RTZ_001.pdf-Results\n",
-      "filename Res0003_AL_6_RTZ_001.pdf-Results\n",
-      "filename Res0004_AB_4_GEZ_001.pdf-Results\n",
-      "filename Res0005_AG_0_RTZ_001.pdf-Results\n",
-      "filename Res0006_AC_4_ETZ_001.pdf-Results\n",
-      "filename Res0007_AF_0_RTZ_001.pdf-Results\n",
-      "filename Res0008_AB_0_RTZ_001.pdf-Results\n",
-      "filename Res0009_AD_3_RTZ_001.pdf-Results\n",
-      "filename Res0010_AC_0_RTZ_001.pdf-Results\n",
-      "filename Res0011_AC_0_RTZ_001.pdf-Results\n",
-      "filename Res0012_AD_0_RTZ_001.pdf-Results\n",
-      "filename Res0013_AC_2_ETZ_001.pdf-Results\n",
-      "filename Res0014_AF_0_RTZ_001.pdf-Results\n",
-      "filename Res0015_AC_0_RTZ_001.pdf-Results\n",
-      "filename Res0016_AH_0_RTZ_001.pdf-Results\n",
-      "filename Res0017___b.pdf-Results\n",
-      "filename Res0018_AE_5_RTZ_001.pdf-Results\n",
-      "filename Res0019_AE_1_ETZ_001.pdf-Results\n",
-      "filename Res0020_AC_0_RTZ_001.pdf-Results\n",
-      "filename Res0021_RA69825186.pdf-Results\n",
-      "filename Res0022_AG_4_ETZ_001.pdf-Results\n",
-      "filename Res0023_AD_1_ETZ_001.pdf-Results\n",
-      "filename Res0024_AC_23_ETZ_001.pdf-Results\n"
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0001_AC_4_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0001_AC_4_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0001_AC_4_ETZ_001.pdf-Results\\\\Page 1\\\\~$Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0001_AC_4_ETZ_001.pdf-Results\\\\Page 2\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0002_AC_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0002_AC_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0002_AC_0_RTZ_001.pdf-Results\\\\Page 2\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0003_AL_6_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0003_AL_6_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0004_AB_4_GEZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0004_AB_4_GEZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0005_AG_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0005_AG_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0006_AC_4_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0006_AC_4_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0007_AF_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0007_AF_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0008_AB_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0008_AB_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0009_AD_3_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0009_AD_3_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0010_AC_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0010_AC_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0010_AC_0_RTZ_001.pdf-Results\\\\Page 2\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0011_AC_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0011_AC_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0012_AD_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0012_AD_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0013_AC_2_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0013_AC_2_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0014_AF_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0014_AF_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0015_AC_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0015_AC_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0016_AH_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0016_AH_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0017___b.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0017___b.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0018_AE_5_RTZ_001.pdf-Results\n",
+      "excel_files []\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0019_AE_1_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0019_AE_1_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0020_AC_0_RTZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0020_AC_0_RTZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0021_RA69825186.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0021_RA69825186.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0022_AG_4_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0022_AG_4_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0022_AG_4_ETZ_001.pdf-Results\\\\Page 2\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0023_AD_1_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0023_AD_1_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0023_AD_1_ETZ_001.pdf-Results\\\\Page 2\\\\Human Friendly Results.xls', 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0023_AD_1_ETZ_001.pdf-Results\\\\Page 3\\\\Human Friendly Results.xls']\n",
+      "get drawing info function D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0024_AC_23_ETZ_001.pdf-Results\n",
+      "excel_files ['D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited/Res0024_AC_23_ETZ_001.pdf-Results\\\\Page 1\\\\Human Friendly Results.xls']\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
-    "     process_file()\n",
+    "     # directory path mentioned\n",
+    "    # try to ad dynamic path parsing\n",
+    "    directory = 'D:/My doc/ImportantDoc/Task/Challenge_and_Instructions_Workstudent_Data_Analyst/Challenge_and_Instructions_Workstudent_Data_Analyst/Results_Task_edited'\n",
+    "    \n",
+    "    process_file(directory)\n",
+    "\n",
     "    \n",
     "if __name__=='__main__':\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
