--- a/Challenge_Data_Analyst_Abhinav_Pareek.ipynb
+++ b/Challenge_Data_Analyst_Abhinav_Pareek.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,18 @@
     "import pandas as pd\n",
     "import os \n",
     "import openpyxl\n",
-    "import re\n",
-    "import numpy as np"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
     "def complete_dataframe(df,new_filename,drawing_index,drawing_type,dp_number,drawing_id,weight,\n",
-    "                      dt_nomcount,dt_nomtolerance,dt_roundcount,dt_roundtolerance):\n",
+    "                      dt_nomcount,dt_nomtolerance,dt_roundcount,dt_roundtolerance,view_count,\n",
+    "                      inclined_drilling_count,inclined_drilling_values):\n",
     "\n",
     "    df['Result']= new_filename # assign the Result Column to respective new value of filename\n",
     "    df['Drawing_Index']= drawing_index # assign the Drawing Index Column to respective filename part\n",
@@ -38,14 +38,22 @@
     "    df['Dimension_Type_Round_Count']=dt_roundcount\n",
     "    df['Dimension_Type_Round_Tolerance']=dt_roundtolerance\n",
     "    \n",
-    "#   just print statements for checking remove after use\n",
-    "    print(df)\n",
-    "    # call ouput csv function     "
+    "    # view count assignment\n",
+    "    df['View_Count'] = view_count\n",
+    "    \n",
+    "    # inclined drilling count & values assignment\n",
+    "    df['Inclined_Drilling_Count']=inclined_drilling_count\n",
+    "    df['Inclined_Drilling_Values']=inclined_drilling_values\n",
+    "    df['Inclined_Drilling_Values'] = df['Inclined_Drilling_Values'].astype(str)\n",
+    "\n",
+    "    # call ouput csv function    \n",
+    "    df.to_csv('Challenge_Data_Analyst_Abhinav_Pareek.csv',index=False,line_terminator='\\r\\n')\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +64,6 @@
     "    weight =\"\"\n",
     "    drawing_id_candidates=[]\n",
     "    weights=[]\n",
-    "#     excel_files = []\n",
-    "\n",
-    "#     # read the required directory and append in the excel file list in each and every page directory\n",
-    "#     for root, dirs, files in os.walk(directory):\n",
-    "#         for file in files:\n",
-    "#             if file.endswith('.xls') or file.endswith('.xlsx'):\n",
-    "#                 excel_files.append(os.path.join(root, file))\n",
     "    \n",
     "    excel_files = excel_path(directory)\n",
     "    # read the files appended in excel file and fetch the drawing id & weight\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,32 +139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_shape_tolerance(directory):\n",
     "    nominal_tolerance_values=[];\n",
     "    round_tolerance_values=[];\n",
-    "    nud=[]\n",
-    "    nld=[]\n",
-    "    rud=[]\n",
-    "    rld=[]\n",
+    "    nom_ud=[]\n",
+    "    nom_ld=[]\n",
+    "    rnd_ud=[]\n",
+    "    rnd_ld=[]\n",
     "    excel_files = excel_path(directory);\n",
     "    # read the files appended in excel file and fetch the nominal & round count\n",
     "    for excel_file in excel_files:\n",
     "        df = pd.read_excel(excel_file,sheet_name = 'Measures') # read the sheet \"Measures\"\n",
-    "#         print(df.columns)\n",
     "        df['Unnamed: 12'] = df['Unnamed: 12'].astype(str)\n",
-    "        nominal_tolerance_values.extend(df.loc[df['Unnamed: 5'] == 'NOMINAL', 'Unnamed: 12'].values) # fetch data from F column\n",
-    "        round_tolerance_values.extend(df.loc[df['Unnamed: 5'] == 'ROUND', 'Unnamed: 12'].values) \n",
-    "        nud.extend(df.loc[df['Unnamed: 5'] == 'NOMINAL', 'Unnamed: 9'].astype(float).values)\n",
-    "        nld.extend(df.loc[df['Unnamed: 5'] == 'NOMINAL', 'Unnamed: 10'].astype(float).values)\n",
-    "        rud.extend(df.loc[df['Unnamed: 5'] == 'ROUND', 'Unnamed: 9'].astype(float).values)\n",
-    "        rld.extend(df.loc[df['Unnamed: 5'] == 'ROUND', 'Unnamed: 10'].astype(float).values)\n",
+    "        \n",
+    "        nominal_tolerance_values.extend(df.loc[df['Unnamed: 5'] == 'NOMINAL', 'Unnamed: 12'].values) # fetch data from F column with shape NOMINAL pnly\n",
+    "        round_tolerance_values.extend(df.loc[df['Unnamed: 5'] == 'ROUND', 'Unnamed: 12'].values) # fetch data from F column with shape ROUND only\n",
+    "        nom_ud.extend(df.loc[df['Unnamed: 5'] == 'NOMINAL', 'Unnamed: 9'].astype(float).values)# fetch nom upper devation\n",
+    "        nom_ld.extend(df.loc[df['Unnamed: 5'] == 'NOMINAL', 'Unnamed: 10'].astype(float).values)# fetch nom lower devation\n",
+    "        rnd_ud.extend(df.loc[df['Unnamed: 5'] == 'ROUND', 'Unnamed: 9'].astype(float).values) # fetch round upper devation\n",
+    "        rnd_ld.extend(df.loc[df['Unnamed: 5'] == 'ROUND', 'Unnamed: 10'].astype(float).values)# fetch round lower devation\n",
     "\n",
-    "#     print(nominal_tolerance_values)\n",
-    "    return calculate_tolerance_value(nominal_tolerance_values,round_tolerance_values,nud,nld,rud,rld);\n",
+    "    return calculate_tolerance_value(nominal_tolerance_values,round_tolerance_values,nom_ud,nom_ld,rnd_ud,rnd_ld);\n",
     "    \n",
     "    \n",
     "    "
@@ -171,12 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_tolerance_value(nominal_tvl,round_tvl,nud,nld,rud,rld):\n",
-    "#     print(nud,nld,rud,rld)\n",
     "   \n",
     "    nom_it_values = [int(val[2:]) for val in nominal_tvl if val.startswith('IT') and val[2:].isdigit()]\n",
     "    nom_min_it_value = 'IT' + str(min(nom_it_values)) if nom_it_values else str(min([r - l for r, l in zip(nud or [0], nld or [0])]))\n",
@@ -184,6 +183,7 @@
     "    round_it_values = [int(val[2:]) for val in round_tvl if val.startswith('IT') and val[2:].isdigit()]\n",
     "    round_min_it_value = 'IT' + str(min(round_it_values)) if round_it_values else str(min([r - l for r, l in zip(rud or [0], rld or [0])]))\n",
     "    round_min_it_value=round_min_it_value.replace('nan','')\n",
+    "    \n",
     "    return nom_min_it_value, round_min_it_value\n",
     "    \n",
     "    "
@@ -191,7 +191,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_view_count(directory_path):\n",
+    "    view_count = 0;\n",
+    "    for root, dirs, files in os.walk(directory_path): # iterate on the directory path provided \n",
+    "        if(os.path.basename(root))=='Canvas 1':# specifiy root path\n",
+    "            for dir_name in dirs:\n",
+    "                if(dir_name.startswith('Sectional ') and dir_name[10:].isdigit()):# check directory name prefix\n",
+    "                    if root.count(os.path.sep) == directory_path.count(os.path.sep) + 3:#check the depth to '3' calcualte only the required files\n",
+    "                        view_count += 1\n",
+    "                    \n",
+    "    return view_count;                \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_drilling_count_values(directory_path):\n",
+    "    idc=0;\n",
+    "    idv=\"\";\n",
+    "    nidv=\"\";\n",
+    "    nidc=0;\n",
+    "   \n",
+    "    excel_files = excel_path(directory_path);\n",
+    "    for excel_file in excel_files:\n",
+    "        \n",
+    "        df = pd.read_excel(excel_file,sheet_name = 'Measures') # read the sheet \"Measures\"\n",
+    "\n",
+    "        round_drilling_coordinates=(df.loc[df['Unnamed: 5'] == 'ROUND', 'Position'].values)\n",
+    "        round_drilling_value = (df.loc[df['Unnamed: 5'] == 'ROUND', 'Label'].values)\n",
+    "        idc,idv=calculate_inclined_drilling_count(round_drilling_coordinates,round_drilling_value)\n",
+    "        nidc=idc+nidc;\n",
+    "        if(len(idv)>0):\n",
+    "            nidv+=idv+\", \";\n",
+    "    nidv = nidv.replace('Ø', '')        \n",
+    "    return nidc,nidv[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_inclined_drilling_count(round_drilling_coordinates,round_drilling_value):\n",
+    "    CUTOFF_INCLINED_DRILLING_POSITION_DIFFERENCE  = 4;\n",
+    "    count = 0;\n",
+    "    inclined_drilling_values=\"\"\n",
+    "    \n",
+    "    for i, cord in enumerate(round_drilling_coordinates):\n",
+    "        x1 = int(cord.split(',')[0][2:])\n",
+    "        y1 = int(cord.split(',')[1][1:-2])\n",
+    "        x2 = int(cord.split(',')[2][2:])\n",
+    "        y2 = int(cord.split(',')[3][1:-2])\n",
+    "        if abs(x1 - x2) > CUTOFF_INCLINED_DRILLING_POSITION_DIFFERENCE and abs(y1 - y2) > CUTOFF_INCLINED_DRILLING_POSITION_DIFFERENCE:\n",
+    "            count += 1\n",
+    "            # If the Label column value is 'ROUND', increment the count and append the value in column B to the string\n",
+    "            inclined_drilling_values += round_drilling_value[i] + \", \"\n",
+    "    if count > 0:\n",
+    "    # Remove the last \", \" from the string\n",
+    "        inclined_drilling_values = inclined_drilling_values[:-2]\n",
+    "    else:\n",
+    "    # If no rows were included in the count, set the value to ''\n",
+    "        inclined_drilling_values = ''    \n",
+    "    \n",
+    "    return count,inclined_drilling_values;\n",
+    "    \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +288,9 @@
     "    dt_nomtolerance=[]\n",
     "    dt_roundcount=[]\n",
     "    dt_roundtolerance=[]\n",
+    "    view_count=[]\n",
+    "    inclined_drilling_count=[]\n",
+    "    inclined_drilling_values=[]\n",
     "   \n",
     "    \n",
     "    #created 13 columns as per mentioned in the sample csv output#\n",
@@ -237,7 +319,14 @@
     "        dt_nomtolerance.append(dt_nst)\n",
     "        dt_roundtolerance.append(dt_rst)\n",
     "        \n",
+    "        #get view count function call\n",
+    "        v_c = get_view_count(directory+\"/\"+filename)\n",
+    "        view_count.append(v_c)\n",
     "        \n",
+    "        # get inclined drill count & value function call\n",
+    "        idc,idv = get_drilling_count_values(directory+\"/\"+filename)\n",
+    "        inclined_drilling_count.append(idc)\n",
+    "        inclined_drilling_values.append(idv)    \n",
     "        \n",
     "        # remove the .pdf-Results from the directorey name\n",
     "        filename = filename.replace(\".pdf-Results\",\"\")\n",
@@ -255,14 +344,16 @@
     "            drawing_index.append(\"\")\n",
     "            drawing_type.append(\"\")\n",
     "            dp_number.append(\"\")\n",
+    "            \n",
     "    # complete dataframe function called and updated\n",
     "    complete_dataframe(df,new_filename,drawing_index,drawing_type,dp_number,drawing_id,weight,\n",
-    "                       dt_nomcount,dt_nomtolerance,dt_roundcount,dt_roundtolerance)     "
+    "                       dt_nomcount,dt_nomtolerance,dt_roundcount,dt_roundtolerance,view_count,\n",
+    "                       inclined_drilling_count,inclined_drilling_values)     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -347,57 +438,57 @@
       "22                              IT7                         0.0   \n",
       "23                              IT8                        16.0   \n",
       "\n",
-      "   Dimension_Type_Round_Tolerance View_Count Inclined_Drilling_Count  \\\n",
-      "0                            IT14        NaN                     NaN   \n",
-      "1                                        NaN                     NaN   \n",
-      "2                                        NaN                     NaN   \n",
-      "3                             5.0        NaN                     NaN   \n",
-      "4                            IT15        NaN                     NaN   \n",
-      "5                            IT13        NaN                     NaN   \n",
-      "6                            IT15        NaN                     NaN   \n",
-      "7                            IT18        NaN                     NaN   \n",
-      "8                            IT14        NaN                     NaN   \n",
-      "9                                        NaN                     NaN   \n",
-      "10                           IT15        NaN                     NaN   \n",
-      "11                           IT15        NaN                     NaN   \n",
-      "12                           IT14        NaN                     NaN   \n",
-      "13                           IT12        NaN                     NaN   \n",
-      "14                                       NaN                     NaN   \n",
-      "15                                       NaN                     NaN   \n",
-      "16                                       NaN                     NaN   \n",
-      "17                           IT13        NaN                     NaN   \n",
-      "18                            IT8        NaN                     NaN   \n",
-      "19                                       NaN                     NaN   \n",
-      "20                              0        NaN                     NaN   \n",
-      "21                           IT16        NaN                     NaN   \n",
-      "22                              0        NaN                     NaN   \n",
-      "23                                       NaN                     NaN   \n",
+      "   Dimension_Type_Round_Tolerance  View_Count  Inclined_Drilling_Count  \\\n",
+      "0                            IT14          13                        8   \n",
+      "1                                          12                        3   \n",
+      "2                                           7                        3   \n",
+      "3                             5.0          20                        4   \n",
+      "4                            IT15           8                        2   \n",
+      "5                            IT13           6                        2   \n",
+      "6                            IT15           6                        5   \n",
+      "7                            IT18           6                        1   \n",
+      "8                            IT14           7                        8   \n",
+      "9                                          11                        0   \n",
+      "10                           IT15           5                        1   \n",
+      "11                           IT15           5                        2   \n",
+      "12                           IT14          20                        7   \n",
+      "13                           IT12           5                        3   \n",
+      "14                                         15                        6   \n",
+      "15                                          8                        4   \n",
+      "16                                         19                        9   \n",
+      "17                           IT13           7                        0   \n",
+      "18                            IT8           5                        1   \n",
+      "19                                         11                        1   \n",
+      "20                              0           5                        0   \n",
+      "21                           IT16          10                        3   \n",
+      "22                              0           9                        0   \n",
+      "23                                         17                       12   \n",
       "\n",
-      "   Inclined_Drilling_Values  \n",
-      "0                       NaN  \n",
-      "1                       NaN  \n",
-      "2                       NaN  \n",
-      "3                       NaN  \n",
-      "4                       NaN  \n",
-      "5                       NaN  \n",
-      "6                       NaN  \n",
-      "7                       NaN  \n",
-      "8                       NaN  \n",
-      "9                       NaN  \n",
-      "10                      NaN  \n",
-      "11                      NaN  \n",
-      "12                      NaN  \n",
-      "13                      NaN  \n",
-      "14                      NaN  \n",
-      "15                      NaN  \n",
-      "16                      NaN  \n",
-      "17                      NaN  \n",
-      "18                      NaN  \n",
-      "19                      NaN  \n",
-      "20                      NaN  \n",
-      "21                      NaN  \n",
-      "22                      NaN  \n",
-      "23                      NaN  \n"
+      "                             Inclined_Drilling_Values  \n",
+      "0                 40, 33, 30, 23, 1.9, 6 +0.5/0, 6, 6  \n",
+      "1                                      138, 104, 10.4  \n",
+      "2                                           17, 34, 3  \n",
+      "3                                10 +5/0, (24), 28, 8  \n",
+      "4                                              23, 15  \n",
+      "5                  8.5 +0.15/-0.05, 8.7 H13 (+0.22/0)  \n",
+      "6          50.5 +0.3/-0.6, 10, 25.9 +0.6/-0.3, 25, 19  \n",
+      "7                                             32 ±1.3  \n",
+      "8   40.5 +0.5/0, 25, 25, (25), 40.5 +0.5/0, 5, 8.3, 6  \n",
+      "9                                                      \n",
+      "10                                                  9  \n",
+      "11                                             12, 85  \n",
+      "12                 13.1, 3, 24 0/-0.5, 30, 21, 16, 30  \n",
+      "13                                       3.2, 21, 138  \n",
+      "14                       8.2, 25, 140, 116, (823), 92  \n",
+      "15                                 40, 44, 13.4, 14.6  \n",
+      "16                3, 24, 16, 1.3, 1.3, 15, 24, 2, 1.3  \n",
+      "17                                                     \n",
+      "18                               12x 11 H13 (+0.27/0)  \n",
+      "19                                                107  \n",
+      "20                                                     \n",
+      "21                                    22, 22 +1/0, 11  \n",
+      "22                                                     \n",
+      "23       38, 33, 17, 14, 20, 20, 32, 20, 10, 6, 7, 27  \n"
      ]
     }
    ],
